| Summary: | ASTERISK-27253: [patch] libsrtp-2.1.x support | ||||
| Reporter: | Alexander Traud (traud) | Labels: | patch | ||
| Date Opened: | 2017-09-06 02:56:32 | Date Closed: | 2017-09-07 17:12:48 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_srtp | ||
| Versions: | 13.17.0 14.6.0 15.0.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) libSRTP_2_1_x.patch | |||
| Description: | Since ASTERISK-26976, libSRTP 2.0.x can be linked. However since libSRTP 2.1.x, the macro {{SRTP_AES_ICM}} got renamed to {{SRTP_AES_ICM_128}} (see commit [2a481bb|http://github.com/cisco/libsrtp/commit/2a481bb1434e4bbb2ce6c95ce1ec227e6e344259] and [d335bd8|http://github.com/cisco/libsrtp/commit/d335bd88b147cf0fdf956bd21a55d3c7c9d974d7]). Because of that, Asterisk 13 does not compile when libSRTP 2.1.x is present:
{code} [CC] res_srtp.c -> res_srtp.o In file included from res_srtp.c:45:0: res_srtp.c: In function ‘policy_set_suite’: srtp/srtp_compat.h:8:21: error: ‘SRTP_AES_ICM’ undeclared (first use in this function) #define AES_128_ICM SRTP_AES_ICM ^ res_srtp.c:267:20: note: in expansion of macro ‘AES_128_ICM’ p->cipher_type = AES_128_ICM; ^~~~~~~~~~~ srtp/srtp_compat.h:8:21: note: each undeclared identifier is reported only once for each function it appears in #define AES_128_ICM SRTP_AES_ICM ^ res_srtp.c:267:20: note: in expansion of macro ‘AES_128_ICM’ p->cipher_type = AES_128_ICM; ^~~~~~~~~~~ Makefile.rules:149: recipe for target 'res_srtp.o' failed make[1]: *** [res_srtp.o] Error 1 Makefile:368: recipe for target 'res' failed make: *** [res] Error 2 {code} | ||||
| Comments: | By: Richard Mudgett (rmudgett) 2017-09-06 11:16:33.958-0500 FYI, When you create an issue, if you check the box indicating that you have read the issue guidelines then the auto response: {quote} Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. {quote} will not happen and you won't feel the need to delete it. By: Alexander Traud (traud) 2017-09-06 16:13:59.925-0500 Mhm. Do you mean that ‘Yes, I have read the Asterisk issue guidelines’ checkbox when creating a new issue report? I tick that always but still get this auto comment since August 2015. I even thought I am not able to submit an issue without ticking that. I am using Apple Safari if that matters. So, I am not sure how to avoid that. By: Richard Mudgett (rmudgett) 2017-09-06 17:03:48.291-0500 That is what I mean. I know it works because it doesn't create that auto comment when I check it when creating issues. By: Joshua C. Colp (jcolp) 2017-09-06 17:16:40.799-0500 [~rmudgett] Unfortunately JIRA doesn't provide enough inspection on the automation to be able to limit things like that. The rule is such that if someone who is not in a specific group creates an issue then it will comment. By: Friendly Automation (friendly-automation) 2017-09-07 13:28:47.071-0500 Change 6418 merged by Jenkins2: res_srtp: Add support for libsrtp2.1. [https://gerrit.asterisk.org/6418|https://gerrit.asterisk.org/6418] By: Friendly Automation (friendly-automation) 2017-09-07 13:55:26.929-0500 Change 6417 merged by Jenkins2: res_srtp: Add support for libsrtp2.1. [https://gerrit.asterisk.org/6417|https://gerrit.asterisk.org/6417] By: Friendly Automation (friendly-automation) 2017-09-07 14:03:17.178-0500 Change 6416 merged by Jenkins2: res_srtp: Add support for libsrtp2.1. [https://gerrit.asterisk.org/6416|https://gerrit.asterisk.org/6416] By: Friendly Automation (friendly-automation) 2017-09-08 05:42:13.320-0500 Change 6415 merged by Joshua Colp: res_srtp: Add support for libsrtp2.1. [https://gerrit.asterisk.org/6415|https://gerrit.asterisk.org/6415] By: Friendly Automation (friendly-automation) 2018-03-14 06:18:13.788-0500 Change 8501 merged by Joshua Colp: res_srtp: Add support for libsrtp2.x on openSUSE. [https://gerrit.asterisk.org/8501|https://gerrit.asterisk.org/8501] By: Friendly Automation (friendly-automation) 2018-03-14 06:26:10.767-0500 Change 8502 merged by Jenkins2: res_srtp: Add support for libsrtp2.x on openSUSE. [https://gerrit.asterisk.org/8502|https://gerrit.asterisk.org/8502] | ||||